# app/Http/Requests/Api/V1/Auth/ResetPasswordRequest.php
@@ -6,26 +6,12 @@ use App\Http\Requests\Api\V1\BaseRequest;
 
 class ResetPasswordRequest extends BaseRequest
 {
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return false;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
     public function rules()
     {
         return [
             'token' => 'required|string',
-            'password' => 'required|string|confirmed|min:6|max|20',
+            'email' => 'required|email',
+            'password' => 'required|string|confirmed|min:6|max:20',
         ];
     }
 }
